examples/test/testpolicy7605.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7605
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key43: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value34
          key2: value3
      podSelector:
        matchLabels:
          key8: value41
          key2: value2
